# Metacraft

./: .README.md.swp  .gitignore  CMakeCache.txt  CMakeLists.txt  Conventions.txt  Notes.txt  README.md  main.cpp
include/: .block.h.swp  .chunk.h.swp  .gui.h.swp  .item.h.swp  .tag.h.swp  .world.h.swp  Common.h  Math.h  Matrix.h  Mesh.h  Model.h  Quaternion.h  Shader.h  Texture.h  Window.h  block.h  block_id.h  block_id.h.orig  camera.h  camera.h.orig  chunk.h  common.h  cubemap.h  day_cycle.h  engine.h  entity.h  factory.h  framebuffer.h  gui.h  input.h  inventory.h  item.h  light.h  list.h  matrix.h  mesh.h  mob.h  model.h  path.h  quaternion.h  (+13 more)
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw/: CMakeLists.txt  README.md
lib/glfw/docs/: CMakeLists.txt  build.dox  input.dox  monitor.dox  news.dox  quick.dox  window.dox
lib/glfw/examples/: CMakeLists.txt  offscreen.c  sharing.c
lib/glfw/include/GLFW/: glfw3.h
lib/glfw/src/: cocoa_init.m  cocoa_joystick.m  cocoa_monitor.m  cocoa_time.c  cocoa_window.m  context.c  egl_context.c  egl_context.h  glx_context.c  glx_context.h  init.c  input.c  internal.h  linux_joystick.c  monitor.c  nsgl_context.m  null_joystick.c  null_monitor.c  null_window.c  osmesa_context.c  posix_thread.c  posix_time.c  posix_tls.c  vulkan.c  wgl_context.c  wgl_context.h  win32_init.c  win32_joystick.c  win32_monitor.c  win32_platform.h  win32_thread.c  win32_time.c  win32_window.c  window.c  wl_init.c  wl_monitor.c  wl_window.c  x11_init.c  x11_monitor.c  x11_platform.h  (+2 more)
lib/stb/include/: stb_image.h
libs/assimp/contrib/gtest/cmake/: internal_utils.cmake
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw/: CMakeLists.txt
libs/stb/: CMakeLists.txt
libs/stb/include/: stb_image.h
res/models/: cube.mtl
res/shaders/: ambient-light.frag  debug.frag  debug.geom  debug.vert  environment.frag  environment.vert  geometry.frag  geometry.vert  light.frag  light.vert  main.frag  main.vert  skybox.frag  skybox.vert
src/: Mesh.cpp  Shader.cpp  Window.cpp  Window.h  main.c  main.cpp
src/engine/: .gui.c.swp  Math.cpp  Mesh.c  Model.c  Shader.c  Texture.c  Texture.cpp  Vector.c  Window.c  cubemap.c  engine.c  framebuffer.c  gui.c  gui.h  input.c  mesh.c  model.c  shader.c  texture.c  transform.c  uniform_buffer.c  window.c
src/game/: camera.c  chunk.c  chunk2.c  client.h  common.h  day_cycle.c  factory.c  game.c  game.h  input.c  input.h  light.c  options.h  protocol.h  server.h  world.c  world2.c
src/math/: Matrix.c  Quaternion.c  Vector.c  matrix.c  quaternion.c  vector.c
src/util/: list.c  util_test.c
src/world/: .block.c.swp  .chunk.c.swp  .item.c.swp  .tag.c.swp  .world.c.swp  block.c  block.h  chunk.c  chunk.h  entity.c  entity.h  inventory.c  item.c  item.h  mob.c  mob.h  path.c  regen_item.py  tag.c  tag.h  world.c  world.h
(+1 files in other folders)
